Add Railway deployment configuration: Dockerfile, Procfile, startup script, and template file

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -9,4 +9,4 @@ cmds = ["python -m pip install --upgrade pip", "pip install -r requirements.txt"
 cmds = ["echo 'No build step needed'"]
 
 [start]
-cmd = "uvicorn api.simple_api:app --host 0.0.0.0 --port $PORT"
+cmd = "python api/simple_api.py"
