--- a/.vercelignore
+++ b/.vercelignore
@@ -1,11 +1,15 @@
 # Ignore Python backend files for Vercel frontend deployment
 # Only ignore root-level api directory (not src/)
 /api/
-# Ignore root-level data directory (not src/data/)
-/data/
 /venv/
 # Ignore Python files (TypeScript files in src/data/ will be included)
 *.py
+# Ignore root data directory files but allow src/data/
+/data/*.json
+/data/*.csv
+/data/models/
+/data/raw/
+/data/processed/
 requirements.txt
 Dockerfile
 Procfile
